Wed, 27 Feb 2008 09:46:55 +0100 <thp@perli.net>
Add Flash Video (flv) and Windows Media Video (wmv) to file detection

	* src/gpodder/util.py: Detect *.flv and *.wmv files as video files

Wed, 27 Feb 2008 09:39:42 +0100 <thp@perli.net>
When sending via Bluetooth, always rename/copy the file

	* src/gpodder/gui.py: When sending files via Bluetooth, and the file
	converter script is not enabled, we are simply copying the file to the
	sync_filename of the episode, therefore creating a nice name. We have
	to copy the file, because neither gnome-obex-send nor bluetooth-sendto
	let us specify the destination filename when sending the file, these
	utilities always take the input filename (thanks to Chris
	<gpodder@noreply.org.uk> for the bug report)
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=49)

Tue, 26 Feb 2008 16:49:06 +0100 <thp@perli.net>
Python code fixup: Compare "None" with "is" instead of "=="

	* doc/dev/daap2rss.py: "== None" => "is None"
	* src/gpodder/config.py: "== None" => "is None"
	* src/gpodder/gui.py: "== None" => "is None"
	* src/gpodder/libgpodder.py: "== None" => "is None"
	* src/gpodder/libpodcasts.py: "== None" => "is None"

Tue, 26 Feb 2008 16:30:56 +0100 <thp@perli.net>
Add support for new "bluetooth-sendto" utility

	* README: Ask for either "gnome-obex-send" or "bluetooth-sendto",
	which are needed for the Bluetooth file transfer
	* src/gpodder/util.py: Add support for "bluetooth-sendto" as an
	alternative to "gnome-obex-send"; initial bug report and patch by
	Leonid Ponomarev (this probably adds bluez-gnome as an optional
	dependency if you want bluetooth send support)

Mon, 25 Feb 2008 15:51:16 +0100 <thp@perli.net>
Show more description text in episode list

	* src/gpodder/libpodcasts.py: Join all lines and strip unnecessary
	data for the episode description that is displayed in the episode list
	when descriptions are enabled (suggested by Jérôme Chabod)

Mon, 25 Feb 2008 14:39:15 +0100 <thp@perli.net>